test(api): MessageServiceTests get methods tested